<resources>
    <string name="home">Home</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="app_name">Template</string>
    <string name="back_description">back</string>
    <string name="login">Log in</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="required">Required</string>
    <string name="sign_up">Sign up</string>
    <string name="email_not_valid">Email is not valid</string>
    <string name="username_not_valid">Username is not valid</string>
    <string name="registration_password_condition1"> at least 6 characters</string>
    <string name="registration_password_condition2">at least 1 uppercase letter</string>
    <string name="username">Username</string>
    <string name="visibility">visibility</string>
    <string name="reset_password">Reset password</string>
    <string name="enter_new_password">Please, enter new password</string>
    <string name="success">Success</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="forgot_password">Forgot password</string>
    <string name="restore_password">Restore password</string>
    <string name="check_email">Check your email</string>

    <!-- Error messages -->
    <string name="error_wrong_credentials">Incorrect email or password. Please check the data and try again.</string>
    <string name="error_invalid_username">Username must be at least 3 characters long and contain only letters and numbers.</string>
    <string name="error_invalid_email">Invalid e-mail address. Please check the entered value and try again.</string>
    <string name="error_invalid_password">Password must be at least 6 characters long and include at least one uppercase letter.</string>
    <string name="error_invalid_access_token">Invalid Access Token. The access token is invalid and may need to be re-authorized.</string>
    <string name="error_username_unavailable">Username is already taken. Please choose a different username.</string>
    <string name="error_email_already_exists">An account with this email address already exists.</string>
    <string name="error_email_not_found">No user found with this email. Please sign up for an account.</string>
    <string name="error_network">Check your internet connection and try again.</string>
    <string name="error_unknown">Something went wrong. We are already looking into it. Please try again later or contact our support team if the error persists.</string>
    <string name="error_unconfirmed_user">Your account is not confirmed yet. Please click the link in the confirmation email we sent you.</string>
    <string name="dialog_user_not_found_title">User not found</string>
    <string name="dialog_user_not_found_message">No user with this e-mail address was found. Do you want to register a new account?</string>

    <!-- Profile screen -->
    <string name="full_name_title">Full name</string>
    <string name="birth_date_title">Birth date</string>
    <string name="country_title">Country</string>
    <string name="logout">Log Out</string>
    <string name="save">Save</string>
    <string name="avatar">Avatar</string>
    <string name="edit_name_dialog_title">Change full name</string>
    <string name="change_country_dialog_title">Change country</string>

    <!-- Settings screen -->
    <string name="about">About</string>
    <string name="theme">Theme</string>
    <string name="terms_of_services">Terms of Services</string>
    <string name="contact_us">Contact Us</string>
    <string name="title_privacy_policy">For further details on how your data is used and stored, please see our\u0020</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="open_source_licenses">Open Source Licenses</string>
    <string name="no_open_source_licenses">No open source licenses found</string>

    <!-- FCM -->
    <string name="default_notification_channel_id" translatable="false">fcm_default_channel</string>
    <string name="notification_permission_title">Notification permission</string>
    <string name="notification_permission_description">The notification permission is important for this app. Please grant the permission.</string>
    <string name="request_notification_permission">Request permission</string>

    <!-- Sign up screen -->
    <string name="accept_terms_conditions">I have read and accept the\u0020</string>
    <string name="terms_conditions">Terms &amp; Conditions</string>
    <string name="success_signup">Thank you for signing up! We sent a confirmation email to you.</string>

    <!-- Kiosk mode-->
    <string name="app_is_admin">The app is device admin</string>
    <string name="app_is_not_device_admin">The app is not device admin</string>
    <string name="settings_languages">Languages</string>
</resources>
